# sage-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  README.md  debug_seed.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  test_api.py  test_mcp_url.py  test_notion_tools.py  vercel.json
.github/workflows/: docker-build.yml  docker.yml  lint.yml
debug/: debug_seed.py  test_api.py  test_mcp_url.py  test_notion_tools.py
sage/: config.py  database.py  main.py
sage/models/: cmo.py  mcp.py  user.py
sage/routers/: admin.py  auth.py  commons.py  mcp.py  notion_auth.py
sage/services/: agent.py  notion.py  notion_mcp.py
sage/services/etl/: documentai.py  extractor.py  gaffa.py  local_parser.py  seeder.py
sage/services/mcp_tools/: commons.py  sensor.py  server.py  tasks.py  workspace.py
static/: index.html  style.css
