[project]
name = "notion-mcp"
version = "0.1.0"
description = "Student Agent for Guided Education API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=46.0.5",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.1",
    "google-cloud-documentai>=3.11.0",
    "httpx>=0.28.1",
    "mcp>=1.2.0",
    "pillow>=12.1.1",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.9.7",
    "pre-commit>=4.1.0",
    "semgrep>=1.85.0",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.9.0",
    "setuptools==70.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"sage/main.py" = ["E402"]


[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
